# HydraNgine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: commons.hpp
include/core/: assets.hpp  audio.hpp  context.hpp  display.hpp  entity.hpp  entity_traits.hpp  extensions.hpp  input.hpp  main.hpp  managed_object.hpp  managed_property.hpp  module.hpp  resources.hpp  uuid.hpp  video.hpp
include/drivers/: display_glfw.hpp  module_loader_linux.hpp  opengl.hpp  video_vulkan.hpp  vku.hpp
include/drivers/vulkan/: camera.hpp  commands.hpp  descriptors.hpp  initializers.hpp  materials.hpp  memory.hpp  shaders.hpp  structs.hpp  window.hpp
src/: HydraNgine.cpp  dummy.c
src/core/: CMakeLists.txt  base.cpp  context.cpp
src/drivers/: CMakeLists.txt  glfw.cpp  vku.cpp  vulkan.cpp
src/drivers/vulkan/: commands.cpp  descriptors.cpp  memory.cpp  shaders.cpp  window.cpp
